<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoyalArchiveOnAndroid</string>
    <string name="synchronisation_service_started">Syncing</string>
    <string name="title_server_detail">Server Detail</string>
    <string name="title_server_list">Servers</string>
    <string name="server_progress">Current Progress</string>
    <string name="server_error">Current Errors</string>
    <string name="server_create_folder">Create Album</string>
    <string name="create_folder_album_hint">WM Pau 2013</string>
    <string name="create_folder_album_title">new album</string>
    <string name="create_folder_date_title">begin date</string>
    <string name="create_folder_execute_title">create</string>
    <string name="create_folder_parent_title">parent folder</string>
    <string name="create_folder_error_no_parent">please select a parent folder</string>
    <string name="create_folder_error_no_album_name">please input a album name</string>
    <string name="create_folder_folder_created">Album created</string>
    <string name="menu_create_album">New Album</string>
    <string name="create_folder_server_title">Server</string>
    <string name="photo_overview_menu_close_title">Finish</string>
    <string name="photo_overview_menu_share_title">Share</string>
    <string name="photo_overview_menu_add_tag_title">Add Tag</string>
    <string name="photo_overview_menu_remove_tag_title">Remove Tag</string>
    <string name="photo_overview_menu_new_tag_item">new tag &#8230;</string>
    <string name="edit_tags">Tags</string>
    <string name="plain_photo_view">None</string>
    <string name="tag">Tag</string>
    <string name="photo_detailview_button_select_tag">Select other Keyword &#8230;</string>
    <string name="photo_overview_menu_add_tag_hint">Input Keyword</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="loading_albums">Loading albums.</string>
    <string name="visible_servers">Visible servers:</string>
    <string name="searching_server">Searching server &#8230;</string>
    <string name="photo_detailview_loading_data">Loading data &#8230;</string>
    <string name="wait_for_image">Wait for image</string>
    <string name="resolve_action_ignore_other">Ignore other version</string>
    <string name="resolve_action_ignore_this">Ignore this version</string>
    <string name="resolve_action_acknowledge">Acknowledge Problem</string>
</resources>