<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/photo_overview_menu_close_selection"
        android:icon="@drawable/ic_action_close_selection_mode"
        android:showAsAction="always|withText"
        android:title="@string/photo_overview_menu_close_title">
    </item>
    <item
        android:id="@+id/photo_overview_menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/photo_overview_menu_share_title">
    </item>
    <item
        android:id="@+id/photo_overview_menu_add_tag_menu"
        android:icon="@drawable/ic_action_add_tag_icon"
        android:showAsAction="ifRoom"
        android:title="@string/photo_overview_menu_add_tag_title">
        <menu>
            <item
                android:id="@+id/photo_overview_menu_add_new_tag"
                android:title="@string/photo_overview_menu_new_tag_item"/>

            <group android:id="@+id/photo_overview_menu_existing_tag" >
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/photo_overview_menu_remove_tag_menu"
        android:icon="@drawable/ic_action_remove_tag_icon"
        android:showAsAction="ifRoom"
        android:title="@string/photo_overview_menu_remove_tag_title">
        <menu>
        </menu>
    </item>

</menu>